<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5648DA"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/allPokemons"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/pokemon_solid"
        android:text="@string/all_pokemons"
        android:textAlignment="center"
        android:textColor="@color/main_color"
        android:textSize="30sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:rippleColor="@color/main_color"
        app:strokeColor="@color/main_color" />

    <Button
        android:id="@+id/allCategories"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/pokemon_solid"
        android:text="@string/all_categories"
        android:textAlignment="center"
        android:textColor="@color/main_color"
        android:textSize="30sp"
        app:cornerRadius="15dp"
        app:iconTint="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allPokemons"
        app:rippleColor="@color/main_color"
        app:strokeColor="@color/main_color" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="441dp"
        android:layout_height="237dp"
        android:contentDescription="@string/picachoo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allCategories"
        app:srcCompat="@drawable/picachoo" />

    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/settings"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/quit_program"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/close"
        tools:ignore="VectorDrawableCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>