<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back_color">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/pokemon_solid"
        android:gravity="center|top"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/pokemon_solid"
        android:text="@string/settings_description"
        android:textAlignment="center"
        android:textColor="@color/main_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <View
        android:id="@+id/divider"
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Switch
        android:id="@+id/cacheAnyPokemon"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_solid"
        android:text="@string/cache_one_pokemon"
        android:textColor="@color/main_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cacheAnyPokemon" />

    <Button
        android:id="@+id/textButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_solid"
        android:text="@string/cache_all_pokemons"
        android:textColor="@color/main_color"
        app:icon="@drawable/download"
        app:iconTint="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider3"
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textButton" />

    <Button
        android:id="@+id/textButton2"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_solid"
        android:text="@string/clear_cache"
        android:textColor="@color/main_color"
        app:icon="@drawable/delete"
        app:iconTint="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textButton" />

    <View
        android:id="@+id/divider4"
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textButton2" />

    <Button
        android:id="@+id/saveSettings"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/pokemon_solid"
        android:text="@string/ok"
        android:textColor="@color/main_color"
        app:cornerRadius="10dp"
        app:iconTint="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/main_color"
        app:strokeColor="@color/main_color" />

    <Button
        android:id="@+id/cancelSettings"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/pokemon_solid"
        android:text="@string/cancel"
        android:textColor="@color/main_color"
        app:cornerRadius="10dp"
        app:iconTint="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/main_color"
        app:strokeColor="@color/main_color" />


</androidx.constraintlayout.widget.ConstraintLayout>