<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back_color"
    tools:context=".AllPokemons">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backOfAllPoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/back"
                android:focusableInTouchMode="false"
                android:keepScreenOn="false"
                app:srcCompat="@drawable/back"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pokemon_solid"
                android:text="@string/all_pokemons"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="36sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_color" />

        <LinearLayout
            android:id="@+id/problem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="328dp"
                android:contentDescription="@string/problem"
                app:srcCompat="@drawable/problem" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pokemon_solid"
                android:text="@string/problem"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/reload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/back"
                android:focusableInTouchMode="false"
                android:keepScreenOn="false"
                app:srcCompat="@drawable/reload"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <ListView
            android:id="@+id/lvMain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </ListView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>