<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/images">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:fontFamily="@font/main_font"
            android:gravity="center"
            android:text="@string/login_head"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:hint="@string/login"
            android:scrollbarThumbHorizontal="@color/white"
            android:scrollbarThumbVertical="@color/white"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#FFFFFF"
            app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/main_font"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textCursorDrawable="@color/white"
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:hint="@string/password"
            android:scrollbarThumbHorizontal="@color/white"
            android:scrollbarThumbVertical="@color/white"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#FFFFFF"
            app:counterTextColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="#FFFFFF"
            app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/main_font"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textCursorDrawable="@color/white"
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/outlinedButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="false"
            android:text="@string/login"
            android:fontFamily="@font/main_font"
            android:textColor="#FFFFFF"
            android:layout_marginTop="15sp"
            android:textSize="26sp"
            app:strokeColor = "@color/material_on_background_disabled"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>